--- a/index.html
+++ b/index.html
@@ -1,16 +1,164 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Bootstrap 101 Template</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-</head>
-<body>
 
-<!--Here goes the actual code-->
-<h1>Hello, world!</h1>
-<script src="http://code.jquery.com/jquery.js"></script>
-<script src="js/bootstrap.min.js"></script>
-</body>
+<html>
+  <head>
+    <title>Sample</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1'>
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css'>
+    <link rel='stylesheet' href='win98.css'>
+    <link rel='stylesheet' href='demo.css'>
+  </head>
+
+  <body class='win98'>
+    <br/>
+
+    <div class='resizable window'>
+      <div class='header'>
+        <img class='icon' src='icons/txt.gif'/>
+        Untitled - Notepad
+        <div class='buttons'>
+          <button>_</button>
+          <button>&#x25FD;</button>
+          <button>X</button>
+        </div>
+      </div>
+
+      <div class='content'>
+        <center>
+          <h3>R U OK?</h3>
+          <p></p>
+          <button>OK</button>
+          <button>Cancel</button>
+        </center>
+      </div>
+    </div>
+    <br/><br/>
+
+    <div class='window'>
+      <div class='header'>
+        <img class='icon' src='icons/exe.gif'/>
+        Fire Virus Control Wizard
+      </div>
+
+      <div class='content'>
+        <center>
+          <h3>YOU HAVE BEEN INFECTED!</h3>
+          <p>Click to fix your computer NOW</p>
+
+          <button>Start Scan</button>
+        </center>
+      </div>
+    </div>
+    <br/><br/>
+
+    <div class='window'>
+      <div class='header'>
+        <img class='icon' src='icons/exe.gif'/>
+        yo.exe
+      </div>
+
+      <div class='content'>
+        <p>You got a yo from thedude92</p>
+        <center>
+          <button>Say YO</button>
+          <button disabled>Say NO</button>
+        </center>
+      </div>
+    </div>
+    <br/><br/>
+
+    <div class="block-centered" style="width: 400px">
+      <div class="menu">
+        <div class="menu-sidebar">
+          <div class="headline">
+            <strong>Windows</strong> 98
+          </div>
+        </div>
+        <ul class='menu-content'>
+          <li class='item folder'>
+            <img class='icon' src='icons/programs.gif'/>
+            Programs
+            <ul class='menu-content'>
+              <li class="item">
+                <img class='icon' src='icons/exe.gif'/>
+                Internet Explorer
+              </li>
+              <li class="item">
+                <img class='icon' src='icons/exe.gif'/>
+                Microsoft Word
+              </li>
+              <li class="item">
+                <img class='icon' src='icons/exe.gif'/>
+                Microsoft Excel
+              </li>
+              <li class="item">
+                <img class='icon' src='icons/exe.gif'/>
+                Microsoft Powerpoint
+              </li>
+              <li class="item">
+                <img class='icon' src='icons/exe.gif'/>
+                Microsoft Access
+              </li>
+            </ul>
+          </li>
+          <li class='item folder'>
+            <img class='icon' src='icons/favourites.gif'/>
+            Favorites
+            <ul class='menu-content'>
+              <li class="item">
+                <img class='icon' src='icons/documents.gif'/>
+                Channels
+              </li>
+              <li class="item">
+                <img class='icon' src='icons/documents.gif'/>
+                Links
+              </li>
+              <li class="item">
+                <img class='icon' src='icons/documents.gif'/>
+                Software Updates
+              </li>
+            </ul>
+          </li>
+          <li class='item folder'>
+            <img class='icon' src='icons/documents.gif'/>
+            Documents
+            <ul class='menu-content'>
+              <li class="item">
+                <img class='icon' src='icons/txt.gif'/>
+                Hot grills.txt
+              </li>
+              <li class="item">
+                <img class='icon' src='icons/txt.gif'/>
+                Passwords.txt
+              </li>
+            </ul>
+          </li>
+          <li class='item folder'>
+            <img class='icon' src='icons/settings.gif'/>
+            Settings
+          </li>
+          <li class='item folder'>
+            <img class='icon' src='icons/find.gif'/>
+            Find
+          </li>
+          <li class='item'>
+            <img class='icon' src='icons/help.gif'/>
+            Help
+          </li>
+          <li class='item'>
+            <img class='icon' src='icons/run.gif'/>
+            Run...
+          </li>
+          <li class='divider'></li>
+          <li class='item'>
+            <img class='icon' src='icons/logoff.gif'/>
+            Log Off Win98...
+          </li>
+          <li class='item'>
+            <img class='icon' src='icons/shutdown.gif'/>
+            Shut Down...
+          </li>
+        </ul>
+      </div>
+    </div>
+  </body>
 </html>
