--- a/main.html
+++ b/main.html
@@ -6,6 +6,8 @@
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css'>
     <link rel='stylesheet' href='win98.css'>
     <link rel='stylesheet' href='demo.css'>
+    <script type="text/javascript" src="jquery-3.4.1.js"></script>
+    <script type="text/javascript" src="main.js"></script>
 </head>
 
 <body class='win98'>
@@ -49,14 +51,6 @@
         </div>
     </div>
 
-    <div class='content'>
-        <center>
-            <h2>Wanna some shiny old-school rusty joke?</h2>
-            <p></p>
-            <button>Yup, buddy!!!!</button>
-            <button onclick="window.location.href='http://vk.com'">Go fuck yaself, bitch</button>
-        </center>
-    </div>
 </div>
 
 </body>
